# DitingSite

./: README.md  pyproject.toml  requirements.txt
core/: config.py  core.py
media/profile_images/: images_tpddTGF.jfif
user_management/: settings.py  urls.py
users/: forms.py  models.py  signals.py  transactions.py  urls.py  views.py
users/css/: home.css  profiles.css
users/migrations/: 0001_initial.py  0002_alter_profile_age_alter_profile_firstname_and_more.py  0003_alter_profile_age.py  0005_auto_20220127_1226.py  0006_profile_age.py  0007_auto_20220128_1225.py  0008_auto_20220128_1228.py  0009_auto_20220128_1258.py  0010_profile_watermark_image.py  0011_alter_profile_watermark_image.py  0012_auto_20220128_1706.py  0013_auto_20220128_1804.py  0014_alter_watermark_user.py  0015_auto_20220128_1818.py  0016_auto_20220130_1930.py  0017_auto_20220131_1311.py  0018_alter_like_user.py
users/templates/users/: base.html  home.html  login.html  profile.html  profiles.html
